--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
      <h1>Titulo nuevo modificado</h1>
+     <form action="#">
+          <input type="text" value="Enviar">
+     </form>
 </head>
 <body>
      
