--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
      <title>Document</title>
      <h1>Titulo nuevo modificado</h1>
      <form action="#">
-          <input type="text" value="Enviar">
+          <input type="text" value="Nombre">
+          <input type="button" value="Enviar">
      </form>
 </head>
 <body>
