se agrego apellido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <form action="#">
           <input type="text" value="Nombre">
           <input type="button" value="Enviar">
+          <input type="text" value="Apellido">
      </form>
 </head>
 <body>
