--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <input type="text" value="Nombre">
           <input type="button" value="Enviar">
           <input type="text" value="Apellido">
+          <input type="number" value="Edad">
      </form>
 </head>
 <body>
