--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <title>Document</title>
      <h1>Titulo nuevo modificado</h1>
      <form action="#">
-          <input type="text" value="Nombre">
+          <input type="texto" value="Nombre">
           <input type="button" value="Enviar">
           <input type="text" value="Apellido">
           <input type="number" value="Edad">
