se agrego la funcionalidad imagen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <input type="number" value="Nombre">
           <input type="button" value="Enviar">
           <input type="text" value="Apellido">
+          <img src="#" alt="Texto_img">
           <input type="number" value="Edad">
      </form>
 </head>
