se implemento cumpleaños

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <form action="#">
           <input type="number" value="Nombre">
           <input type="button" value="Enviar">
+          <input type="date">
           <input type="text" value="Apellido">
           <input type="number" value="Edad">
      </form>
